@@ -9,6 +9,9 @@ class Net::SSLeay::OCSP_BASICRESP {
   # Fields
   has certs_list : List of Net::SSLeay::X509;
   
+  # For Net::SSLeay::OCSP#response_get1_basic method.
+  has ref_ocsp_response : Net::SSLeay::OCSP_RESPONSE;
+  
   # Class Methods
   private static method new_with_pointer : Net::SSLeay::OCSP_BASICRESP ($pointer : Address, $options : object[] = undef) {
     
