@@ -4,6 +4,7 @@
     * Add Net::SSLeay::OCSP#resp_find method.
     * Add Net::SSLeay::OCSP_SINGLERESP#DESTROY method.
     * Add Net::SSLeay::OCSP#resp_get0 method.
+    * Add Net::SSLeay::OCSP#response_get1_basic method.
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
